# Drone

./: CMakeLists.txt  Readme.txt  cosedafare.txt  main.cpp  serial_monitor.py  serial_plot.py
lib/: CMakeLists.txt  Library.cpp  Library.h  MahonyAHRS.c  MahonyAHRS.h  init.cpp  init.h  mpu9250.cpp  mpu9250.h
